<resources>
    <string name="app_name">DawgsTeCCSupport</string>

    <string name="about">About</string>
    <string name="resources">Resources</string>
    <string name="university_of_washington_tacoma_logo">University of Washington Tacoma Logo</string>
    <string name="dawgstecssuport">DawgsTeCSSupport</string>

    <string name="button_resource"> Resources</string>
    <string name="button_study_tips"> Study Tips</string>
    <string name="button_clubs"> Student Clubs</string>
    <string name="button_leetcode"> LeetCode</string>
    <string name="button_career"> Career Tips</string>
    <string name="home"> Home</string>

    <string name="textview_title"> Student CS resources</string>
    <!-- strings for the career fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="career_description_textview">This section will help with finding some key resources when it comes to finding a career in computer science during your time in undergrad.</string>
    <string name="career_tips_title_textview">Career Tips</string>
    <string name="career_bulleted_list">
    \u2022 Research about Grad School\n
    \u2022 Ask professors for research\n
    \u2022 Use LinkedIN\n
    \u2022 Attend career fairs\n
    \u2022 Frequent appointments with advisors\n
    \u2022 Study abroad\n
    \u2022 Apply to internships\n
    \u2022 Use Handshake
    </string>
    <string name="list_of_tips">List of Tips</string>
    <string name="more_info">More Info</string>
    <string name="textview">TextView</string>
    <string name="linkCareer">https://www.tacoma.uw.edu/career</string>
    <string name="intro_resources">Intro</string>

    <!-- Names of the navigation buttons -->
    <string name="home_button_text">Home</string>
    <string name="resources_button_text">Resources</string>


    <!-- Strings for the resource fragment -->
    <string name="resource_description_textview">This section gives you general resources that may be helpful during your time at UW and the computer science major.</string>
    <string name="resource_tips">Resource Tips</string>
    <string name="resource_list">
     General resources\n
     Advising\n
     Internships\n
     Certificates\n
     Course registration\n
     SET scholarships\n
     Financial aid\n
    </string>
    <string name="links_to_resources">
       https://www.tacoma.uw.edu/set/student/resources\n
       https://www.tacoma.uw.edu/set/advising\n
       https://www.tacoma.uw.edu/set/students/career\n
       https://www.tacoma.uw.edu/set/programs/certificates\n
       https://itconnect.uw.edu/tools-services-support/academic-planning/myplan-academic-planner/\n
       https://www.tacoma.uw.edu/set/admission/scholarships\n
       https://www.tacoma.uw.edu/finaid">Financial aid\n

    </string>
    <string name="links">Links</string>
    <string name="women_in_computer_science">Women In Computer Science</string>
    <string name="ux_ui">UX/UI</string>
    <string name="programming_project">Programming Project</string>
    <string name="game_development">Game Development</string>
    <string name="ieee">IEEE</string>
    <string name="huscii_developers">HUSCII Developers</string>
    <string name="student_clubs">Student Clubs</string>
    <string name="logo">Logo</string>
    <string name="homeRes">Home</string>


    <string name="enter_name_feedback">Enter Name:</string>
    <string name="enter_year_feedback">Enter Year: (ex: Senior)</string>
    <string name="feedback_goes_here">Feedback goes here!</string>
    <string name="feedback_title">Leave a Review of App</string>
    <string name="app_logo_feedback">App logo</string>
    <string name="feedback">Feedback</string>
    <string name="submitFeedback">Submit!</string>
    <string name="view_feedback">View Feedback!</string>

    <!-- Email addresses hyperlinks -->
    <string name="jamesEmail"><a href="mailto:jjl336@uw.edu">jjl336@uw.edu</a></string>
    <string name="enriqueEmail"><a href="mailto:enriquev@uw.edu">enriquev@uw.edu</a></string>
    <string name="michaelEmail"><a href="mailto:mtuskan@uw.edu">mtuskan@uw.edu</a></string>
    <string name="register">Register</string>

    <string name="email_hint">Enter your email</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="register_text">REGISTER</string>

    <string name="login_text">LOGIN</string>
    <string name="register_navigate_text">Click here to Register!</string>

    <string name="LOGIN_PREFS">edu.tacoma.uw.mtuskan.projectsprint1_group9.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>

    <string name="action_logout">logout</string>
    <string name="dawgsteccsupport">DawgsTeCCSupport</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="viewButton">View Feedback</string>
</resources>