<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resourcesActivity">

    <TextView
        android:id="@+id/textViewResource"
        android:layout_width="255dp"
        android:layout_height="75dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="monospace"
        android:text="@string/textview_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCareer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonStudentResources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="50dp"
        android:text="@string/button_resource"
        app:layout_constraintBottom_toTopOf="@+id/buttonStudyTips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonStudentClubs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="184dp"
        android:text="@string/button_clubs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonStudyTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="36dp"
        android:text="@string/button_study_tips"
        app:layout_constraintBottom_toTopOf="@+id/buttonLeetCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLeetCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="47dp"
        android:text="@string/button_leetcode"
        app:layout_constraintBottom_toTopOf="@+id/buttonStudentClubs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCareer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="47dp"
        android:text="@string/button_career"
        app:layout_constraintBottom_toTopOf="@+id/buttonStudentResources"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>