<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/career_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B7A57A"
    tools:context=".CareerFragment">

    <TextView
        android:id="@+id/resourceHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="154dp"
        android:fontFamily="@font/encode_sans_condensed_black"
        android:text="@string/career_tips_title_textview"
        android:textAlignment="center"
        android:textColor=" #4B2E83"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/careerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="sans-serif"
        android:text="@string/career_description_textview"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resourceHeader" />

    <TextView
        android:id="@+id/bulletListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="73dp"
        android:fontFamily="sans-serif"
        android:text="@string/career_bulleted_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/careerInfo" />

    <TextView
        android:id="@+id/textViewIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="126dp"
        android:fontFamily="@font/encode_sans_condensed_black"
        android:text="Intro"
        android:textColor="#4B2E83"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="441dp"
        android:fontFamily="@font/encode_sans_condensed_black"
        android:text="@string/list_of_tips"
        android:textColor="#4B2E83"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewMoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/encode_sans_condensed_black"
        android:text="@string/more_info"
        android:textColor="#4B2E83"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="92dp"
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/linkCareer"
        android:textColorLink="#4B2E83"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="@+id/textViewMoreInfo"
        app:layout_constraintTop_toBottomOf="@+id/bulletListTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>